implemented order method, some structure improvement.

--- a/API_test.ipynb
+++ b/API_test.ipynb
@@ -2188,6 +2188,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'error': {'message': 'This is not a verified IP.',\n",
+       "  'name': 'no_authorization_ip'}}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from models.Order import Order\n",
+    "\n",
+    "order = Order()\n",
+    "order.order_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
